Fix CS header name overflow ellipse

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -604,7 +604,7 @@ img {
   cursor: pointer;
   margin-top: 0.6rem;
   margin-left: 1rem;
-  max-width: 8rem;
+  max-width: 9rem;
 }
 
 .cs-header-or {
